[Filter]: Вернул программу в рабочее состояние